fix: double scrollbar
closes #3

--- a/style/global.scss
+++ b/style/global.scss
@@ -9,10 +9,13 @@
 }
 
 #particles {
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
     width: 100%;
 
-    position: absolute;
+    overflow: hidden;
+
+    position: fixed;
     top: 0;
     z-index: -1;
 }
